Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -193,10 +193,10 @@
   "pli-tv-kd10:2.15.3": "He did as asked and said to the King, ",
   "pli-tv-kd10:2.15.4": "‘Sir, the chariot is ready. You may leave when you’re ready.’ ",
   "pli-tv-kd10:2.15.5": "The king then mounted that chariot, ",
-  "pli-tv-kd10:2.15.6": "and the Prince drove it. ",
-  "pli-tv-kd10:2.15.7": "But he drove it away from the army. ",
-  "pli-tv-kd10:2.15.8": "When they had gone a long way, the King said to the Prince, ",
-  "pli-tv-kd10:2.15.9": "‘Unharness the chariot. I’m tired and I want to lie down.’ ",
+  "pli-tv-kd10:2.15.6": "with the prince driving it. ",
+  "pli-tv-kd10:2.15.7": "Now he drove the chariot away from the army. ",
+  "pli-tv-kd10:2.15.8": "When they had gone a long way, the king said to the prince, ",
+  "pli-tv-kd10:2.15.9": "‘Listen, unharness the chariot. I’m tired. I wish to lie down.’ ",
   "pli-tv-kd10:2.15.10": "He did as asked and then sat down cross-legged on the ground. ",
   "pli-tv-kd10:2.15.11": "The king lay down, resting his head on the prince’s lap. ",
   "pli-tv-kd10:2.15.12": "And because he was tired, he quickly fell asleep. ",
