--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -176,12 +176,12 @@
   "pli-tv-kd10:2.13.3": "‘Well then, young brahmin, learn it.’ ",
   "pli-tv-kd10:2.13.4": "Soon the Prince was getting up early in the morning, before singing sweetly and playing his lute in the elephant stables. ",
   "pli-tv-kd10:2.13.5": "King Brahmadatta, too, was getting up early, and he heard that music. He asked his people ",
-  "pli-tv-kd10:2.14.1": "who it was, ",
-  "pli-tv-kd10:2.14.2": "and they replied that it was a young brahmin who was an apprentice of such-and-such an elephant trainer. ",
+  "pli-tv-kd10:2.14.1": "who it was. ",
+  "pli-tv-kd10:2.14.2": "They replied that it was a young brahmin who was an apprentice of such-and-such an elephant trainer. ",
   "pli-tv-kd10:2.14.3": "‘Well then, bring him here.’ ",
-  "pli-tv-kd10:2.14.4": "They brought the Prince, ",
-  "pli-tv-kd10:2.14.5": "and the King asked him whether he was the one who had been singing and playing the lute. ",
-  "pli-tv-kd10:2.14.6": "When the Prince confirmed that it was he, ",
+  "pli-tv-kd10:2.14.4": "They brought the prince, ",
+  "pli-tv-kd10:2.14.5": "and the king asked him whether he was the one who had been singing and playing the lute. ",
+  "pli-tv-kd10:2.14.6": "When the prince confirmed that it was he, ",
   "pli-tv-kd10:2.14.7": "the King said, ‘Well then, sing and play right here.’ ",
   "pli-tv-kd10:2.14.8": "Dīghāvu consented and did his best to please the King. ",
   "pli-tv-kd10:2.14.9": "The King said, ‘Young brahmin, please attend on me,’ ",
