--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -182,9 +182,9 @@
   "pli-tv-kd10:2.14.4": "They brought the prince, ",
   "pli-tv-kd10:2.14.5": "and the king asked him whether he was the one who had been singing and playing the lute. ",
   "pli-tv-kd10:2.14.6": "When the prince confirmed that it was he, ",
-  "pli-tv-kd10:2.14.7": "the King said, ‘Well then, sing and play right here.’ ",
-  "pli-tv-kd10:2.14.8": "Dīghāvu consented and did his best to please the King. ",
-  "pli-tv-kd10:2.14.9": "The King said, ‘Young brahmin, please attend on me,’ ",
+  "pli-tv-kd10:2.14.7": "the king said, ‘Well then, sing and play right here.’ ",
+  "pli-tv-kd10:2.14.8": "Dīghāvu consented and did his best to please the king. ",
+  "pli-tv-kd10:2.14.9": "The king said, ‘Now then, young man, please attend on me.’ ",
   "pli-tv-kd10:2.14.10": "and the Prince agreed. ",
   "pli-tv-kd10:2.14.11": "The Prince then got up before the King and went to bed after him. He willingly performed any services and was pleasant in his conduct and speech. ",
   "pli-tv-kd10:2.14.12": "Soon the King put the Prince in an intimate position of trust. ",
