--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -185,12 +185,12 @@
   "pli-tv-kd10:2.14.7": "the king said, ‘Well then, sing and play right here.’ ",
   "pli-tv-kd10:2.14.8": "Dīghāvu consented and did his best to please the king. ",
   "pli-tv-kd10:2.14.9": "The king said, ‘Now then, young man, please attend on me.’ ",
-  "pli-tv-kd10:2.14.10": "and the Prince agreed. ",
-  "pli-tv-kd10:2.14.11": "The Prince then got up before the King and went to bed after him. He willingly performed any services and was pleasant in his conduct and speech. ",
-  "pli-tv-kd10:2.14.12": "Soon the King put the Prince in an intimate position of trust. ",
-  "pli-tv-kd10:2.15.1": "On one occasion the King said to the Prince, ",
-  "pli-tv-kd10:2.15.2": "‘Harness a chariot and we’ll go hunting.’ ",
-  "pli-tv-kd10:2.15.3": "He did as asked and said to the King, ",
+  "pli-tv-kd10:2.14.10": "The prince agreed. ",
+  "pli-tv-kd10:2.14.11": "The prince then got up before the king and went to bed after him. He willingly performed any services and was pleasant in his conduct and speech. ",
+  "pli-tv-kd10:2.14.12": "Soon the king put the prince in an intimate position of trust. ",
+  "pli-tv-kd10:2.15.1": "On one occasion the king said to the prince, ",
+  "pli-tv-kd10:2.15.2": "‘Listen, young man. Harness a chariot, and let’s go hunting.’ ",
+  "pli-tv-kd10:2.15.3": "He did as asked and told the king, ",
   "pli-tv-kd10:2.15.4": "‘Sir, the chariot is ready. You may leave when you’re ready.’ ",
   "pli-tv-kd10:2.15.5": "The king then mounted that chariot, ",
   "pli-tv-kd10:2.15.6": "with the prince driving it. ",
