--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -171,7 +171,7 @@
   "pli-tv-kd10:2.12.3": "Just then King Brahmadatta was up in his best stilt house, ",
   "pli-tv-kd10:2.12.4": "and he saw Prince Dīghāvu circumambulating the pyre, raising his joined palms. He thought, ",
   "pli-tv-kd10:2.12.5": "‘No doubt this is a relative of King Dīghīti. This is surely a sign of trouble for me, in that nobody has told me.’ ",
-  "pli-tv-kd10:2.13.1": "The Prince then went into the wilderness and cried his heart out. Wiping away his tears, he entered Benares and went to the elephant stables next to the royal compound. He said to the elephant trainer, ",
+  "pli-tv-kd10:2.13.1": "The prince then went into the wilderness and cried his heart out. Wiping away his tears, he entered Benares and went to the elephant stables next to the royal compound. He said to the elephant trainer, ",
   "pli-tv-kd10:2.13.2": "‘Teacher, I wish to learn your profession.’ ",
   "pli-tv-kd10:2.13.3": "‘Well then, young brahmin, I’ll teach you.’ ",
   "pli-tv-kd10:2.13.4": "Soon the prince was getting up early in the morning, singing sweetly and playing his lute in the elephant stables. ",
