--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -165,7 +165,7 @@
   "pli-tv-kd10:2.11.6": "‘I’m not insane; I’m not babbling. The wise will understand.’ ",
   "pli-tv-kd10:2.11.7": "King Dīghīti repeated what he had said to the Prince a second ",
   "pli-tv-kd10:2.11.8": "and a third time, and events unfolded as before. ",
-  "pli-tv-kd10:2.11.20": "Then, when the parading was finished, the people took King Dīghīti and his wife through the southern gate and cut them into four pieces. They placed the pieces at the four directions, set up guard, and departed. ",
+  "pli-tv-kd10:2.11.20": "Then, when the parading was finished, they took King Dīghīti and his wife through the southern gate and cut them in four. They placed the pieces at the four directions, set up guard, and departed. ",
   "pli-tv-kd10:2.12.1": "Prince Dīghāvu entered Benares, brought back some alcohol, and gave it to the guards. ",
   "pli-tv-kd10:2.12.2": "When they were lying drunken on the ground, he collected sticks, built a funeral pyre, and lifted his parents’ bodies on top. He then lit the pyre, and raising his joined palms, he circumambulated it with his right side toward it. ",
   "pli-tv-kd10:2.12.3": "Just then King Brahmadatta was up in his magnificent stilt house, ",
