Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -160,8 +160,8 @@
   "pli-tv-kd10:2.10.5": "For hatred never ends through hatred; ",
   "pli-tv-kd10:2.10.6": "hatred only ends through love.’ ",
   "pli-tv-kd10:2.11.1": "The people there said to King Dīghīti, ‘You’re insane, King Dīghīti, you’re babbling. ",
-  "pli-tv-kd10:2.11.2": "Who is Dīghāvu? ",
-  "pli-tv-kd10:2.11.3": "And who is he saying this to?’ ",
+  "pli-tv-kd10:2.11.2": "Who’s Dīghāvu? ",
+  "pli-tv-kd10:2.11.3": "Who’s he saying this to?’ ",
   "pli-tv-kd10:2.11.6": "‘I’m not insane; I’m not babbling. The wise will understand.’ ",
   "pli-tv-kd10:2.11.7": "King Dīghīti repeated what he had said to the Prince a second ",
   "pli-tv-kd10:2.11.8": "and a third time, and events unfolded as before. ",
