Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -155,7 +155,7 @@
   "pli-tv-kd10:2.9.5": "Saying, ‘Yes, Sir,’ they bound and shaved King Dīghīti and his wife as instructed, and paraded them from street to street, from intersection to intersection, to the beat of a harsh drum. ",
   "pli-tv-kd10:2.10.1": "Just then Prince Dīghāvu thought, ‘I haven’t seen my parents for a long time. Why don’t I pay them a visit?’ ",
   "pli-tv-kd10:2.10.2": "When he entered Benares, he saw what was happening to his parents. ",
-  "pli-tv-kd10:2.10.3": "As he went up to them, King Dīghīti said to him, ",
+  "pli-tv-kd10:2.10.3": "As he approached them, King Dīghīti said to him, ",
   "pli-tv-kd10:2.10.4": "‘My dear Dīghāvu, see neither long nor short. ",
   "pli-tv-kd10:2.10.5": "For hatred never ends through hatred; ",
   "pli-tv-kd10:2.10.6": "hatred only ends through love.’ ",
