--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -151,8 +151,8 @@
   "pli-tv-kd10:2.9.1": "The King ordered his people to get King Dīghīti and his wife. ",
   "pli-tv-kd10:2.9.2": "When they had done so, ",
   "pli-tv-kd10:2.9.3": "he said, ",
-  "pli-tv-kd10:2.9.4": "‘Bind their arms behind their backs with a strong rope. Shave their heads and parade them from street to street, from intersection to intersection, to the beat of a harsh drum. Then take them out of town through the southern gate, cut them into four pieces, and place the pieces at the four directions.’ ",
-  "pli-tv-kd10:2.9.5": "Saying, ‘Yes, Sir,’ they bound and shaved King Dīghīti and his wife as instructed, and paraded them from street to street, from intersection to intersection, to the beat of a harsh drum. ",
+  "pli-tv-kd10:2.9.4": "‘Bind their arms behind their backs with a strong rope and shave their heads. Parade them from street to street and square to square to the beat of a harsh drum. Then take them out of town through the southern gate, cut them in four, and place the pieces at the four directions.’ ",
+  "pli-tv-kd10:2.9.5": "Saying, ‘Yes, Sir,’ they bound and shaved King Dīghīti and his wife, and paraded them as instructed. ",
   "pli-tv-kd10:2.10.1": "Just then Prince Dīghāvu thought, ‘I haven’t seen my parents for a long time. Why don’t I pay them a visit?’ ",
   "pli-tv-kd10:2.10.2": "When he entered Benares, he saw what was happening to his parents. ",
   "pli-tv-kd10:2.10.3": "As he approached them, King Dīghīti said to him, ",
