Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -148,7 +148,7 @@
   "pli-tv-kd10:2.7.3": "As he was living outside of town, Prince Dīghāvu was soon training in all branches of knowledge. ",
   "pli-tv-kd10:2.8.1": "At this time King Dīghīti’s old barber was living at King Brahmadatta’s court. ",
   "pli-tv-kd10:2.8.2": "On one occasion he saw King Dīghīti and his wife staying in that potter’s house, disguised as wanderers. He then went to King Brahmadatta and told him. ",
-  "pli-tv-kd10:2.9.1": "The King ordered his people to get King Dīghīti and his wife. ",
+  "pli-tv-kd10:2.9.1": "The king ordered his people to get King Dīghīti and his wife. ",
   "pli-tv-kd10:2.9.2": "When they had done so, ",
   "pli-tv-kd10:2.9.3": "he said, ",
   "pli-tv-kd10:2.9.4": "‘Bind their arms behind their backs with a strong rope and shave their heads. Parade them from street to street and square to square to the beat of a harsh drum. Then take them out of town through the southern gate, cut them in four, and place the pieces at the four directions.’ ",
