Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -143,7 +143,7 @@
   "pli-tv-kd10:2.6.5": "When the pregnancy matured, the queen gave birth to a son. ",
   "pli-tv-kd10:2.6.6": "They called him Dīghāvu. ",
   "pli-tv-kd10:2.6.7": "Soon enough Prince Dīghāvu became self-reliant. ",
-  "pli-tv-kd10:2.7.1": "King Dīghīti thought, ‘This King Brahmadatta has caused us much misfortune; he’s taken our army, our vehicles and transport animals, and our country and wealth. If he finds out about us, he will kill all three of us. Let me take Prince Dīghāvu to live out-of-town.’ ",
+  "pli-tv-kd10:2.7.1": "King Dīghīti thought, ‘This King Brahmadatta has caused us much misfortune; he’s taken our army, our vehicles and transport animals, and our country and wealth. If he finds out about us, he’ll kill all three of us. Let me take Prince Dīghāvu to live out-of-town.’ ",
   "pli-tv-kd10:2.7.2": "And he did just that. ",
   "pli-tv-kd10:2.7.3": "As he was living outside of town, Prince Dīghāvu was soon training in all branches of knowledge. ",
   "pli-tv-kd10:2.8.1": "At this time King Dīghīti’s old barber was living at King Brahmadatta’s court. ",
