Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -125,8 +125,8 @@
   "pli-tv-kd10:2.4.1": "Soon the queen became pregnant. ",
   "pli-tv-kd10:2.4.2": "She craved to see the fully equipped fourfold army arrayed on even ground at sunrise and to drink water from the washing of swords. ",
   "pli-tv-kd10:2.4.3": "She told the King, ",
-  "pli-tv-kd10:2.4.4": "and he replied, ‘How are we going to achieve that when we’re in such a difficult situation?’ ",
-  "pli-tv-kd10:2.4.5": "‘If I don’t get it, I’ll die.’ ",
+  "pli-tv-kd10:2.4.4": "He said, ‘How can we possibly achieve that when things are so difficult for us?’ ",
+  "pli-tv-kd10:2.4.5": "She replied, ‘Well, if I don’t get it, I’ll die.’ ",
   "pli-tv-kd10:2.5.1": "At that time King Brahmadatta had a brahmin counselor who was a friend of King Dīghīti. ",
   "pli-tv-kd10:2.5.2": "King Dīghīti went to his friend and told him about his wife’s pregnancy ",
   "pli-tv-kd10:2.5.3": "and craving. ",
