Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -124,7 +124,7 @@
   "pli-tv-kd10:2.3.11": "When they eventually arrived, they stayed in the house of a potter on the edge of the town, disguised as wanderers. ",
   "pli-tv-kd10:2.4.1": "Soon the queen became pregnant. ",
   "pli-tv-kd10:2.4.2": "She craved to see the fully equipped fourfold army arrayed on even ground at sunrise and to drink water from the washing of swords. ",
-  "pli-tv-kd10:2.4.3": "She told the King, ",
+  "pli-tv-kd10:2.4.3": "She told the king. ",
   "pli-tv-kd10:2.4.4": "He said, ‘How can we possibly achieve that when things are so difficult for us?’ ",
   "pli-tv-kd10:2.4.5": "She replied, ‘Well, if I don’t get it, I’ll die.’ ",
   "pli-tv-kd10:2.5.1": "At that time King Brahmadatta had a brahmin counselor who was a friend of King Dīghīti. ",
