Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -113,10 +113,10 @@
   "pli-tv-kd10:2.3.0": "2. The account of Dīghāvu ",
   "pli-tv-kd10:2.3.1": "The Buddha then said, ",
   "pli-tv-kd10:2.3.2": "“At one time in Benares, monks, there was a king of Kāsī called Brahmadatta. He was rich and powerful, had many vehicles and transport animals, and possessed a large kingdom and much wealth. ",
-  "pli-tv-kd10:2.3.3": "Then there was Dīghīti, the King of Kosala, who was poor and had little power, who had few vehicles and transport animals, and who possessed only a small kingdom and little wealth. ",
+  "pli-tv-kd10:2.3.3": "Then there was Dīghīti, the king of Kosala, who was poor and had little power, who had few vehicles and transport animals, and who possessed only a small kingdom and little wealth. ",
   "pli-tv-kd10:2.3.4": "At one time King Brahmadatta, armed with his fourfold army, marched out to attack King Dīghīti. ",
   "pli-tv-kd10:2.3.5": "When King Dīghīti heard about this, ",
-  "pli-tv-kd10:2.3.6": "he reflected on King Brahmadatta’s superior wealth and power and concluded, ‘I’m incapable of repelling even a single strike from Brahmadatta. ",
+  "pli-tv-kd10:2.3.6": "he reflected on King Brahmadatta’s superior wealth and power, and he concluded, ‘I’m incapable of repelling even a single strike from Brahmadatta. ",
   "pli-tv-kd10:2.3.7": "Let me flee the town before he arrives.’ ",
   "pli-tv-kd10:2.3.8": "And he fled the town together with his queen. ",
   "pli-tv-kd10:2.3.9": "King Brahmadatta then conquered and seized King Dīghītiʼs army, vehicles, and transport animals, as well as his country and wealth. ",
