--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -105,8 +105,8 @@
   "pli-tv-kd10:2.2.8": "The Buddha then went to those monks, sat down on the prepared seat, and said, ",
   "pli-tv-kd10:2.2.9": "“Enough, monks, don’t quarrel and dispute.” ",
   "pli-tv-kd10:2.2.10": "A certain monk who spoke contrary to the Teaching replied, ",
-  "pli-tv-kd10:2.2.11": "“Wait, Sir. ",
-  "pli-tv-kd10:2.2.12": "You are the Lord of the Teaching and there is no need for you to be concerned. Just enjoy the happiness of the present life. ",
+  "pli-tv-kd10:2.2.11": "“Wait, Sir, ",
+  "pli-tv-kd10:2.2.12": "you’re the Lord of the Teaching. Be at ease and enjoy the happiness of meditation. ",
   "pli-tv-kd10:2.2.13": "We’ll face the consequences of this quarrelling and disputing.” ",
   "pli-tv-kd10:2.2.14": "The Buddha repeated his appeal to those monks, ",
   "pli-tv-kd10:2.2.16": "but got the same reply. ",
