Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -102,7 +102,7 @@
   "pli-tv-kd10:2.2.3": "A certain monk went to the Buddha, bowed, and told him what was happening, adding, ",
   "pli-tv-kd10:2.2.6": "“Venerable Sir, it would be good if you went to those monks out of compassion.” ",
   "pli-tv-kd10:2.2.7": "The Buddha consented by remaining silent. ",
-  "pli-tv-kd10:2.2.8": "The Buddha then went to those monks, sat down on the prepared seat, and said, ",
+  "pli-tv-kd10:2.2.8": "He then went to those monks, sat down on the prepared seat, and said, ",
   "pli-tv-kd10:2.2.9": "“Enough, monks, don’t quarrel and dispute.” ",
   "pli-tv-kd10:2.2.10": "A certain monk who spoke contrary to the Teaching replied, ",
   "pli-tv-kd10:2.2.11": "“Wait, Sir, ",
