Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -13,7 +13,7 @@
   "pli-tv-kd10:1.1.8": "“You’ve committed an offense. Do you recognize it?” ",
   "pli-tv-kd10:1.1.9": "“No, I haven’t committed any offense that I should recognize.” ",
   "pli-tv-kd10:1.1.10": "Soon afterwards the monks achieved unanimity, and they ejected that monk for not recognizing the offense. ",
-  "pli-tv-kd10:1.2.1": "But that monk was learned and a master of the tradition; he was an expert on the Teaching, the Monastic Law, and the Key Terms; he was knowledgeable and competent, had a sense of conscience, and was afraid of wrongdoing and fond of the training. ",
+  "pli-tv-kd10:1.2.1": "But that monk was learned, a master of the tradition; he was an expert on the Teaching, the Monastic Law, and the Key Terms; he was knowledgeable and competent, had a sense of conscience, and was afraid of wrongdoing and fond of the training. ",
   "pli-tv-kd10:1.2.2": "He went to his friends and said, ",
   "pli-tv-kd10:1.2.3": "“This isn’t an offense ",
   "pli-tv-kd10:1.2.4": "and so I haven’t committed one. ",
