--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -15,8 +15,8 @@
   "pli-tv-kd10:1.1.10": "Soon afterwards the monks achieved unanimity, and they ejected that monk for not recognizing the offense. ",
   "pli-tv-kd10:1.2.1": "But that monk was learned, a master of the tradition; he was an expert on the Teaching, the Monastic Law, and the Key Terms; he was knowledgeable and competent, had a sense of conscience, and was afraid of wrongdoing and fond of the training. ",
   "pli-tv-kd10:1.2.2": "He went to his friends and said, ",
-  "pli-tv-kd10:1.2.3": "“This isn’t an offense ",
-  "pli-tv-kd10:1.2.4": "and so I haven’t committed one. ",
+  "pli-tv-kd10:1.2.3": "“This isn’t an offense, ",
+  "pli-tv-kd10:1.2.4": "and so I haven’t committed any. ",
   "pli-tv-kd10:1.2.5": "I haven’t been ejected, ",
   "pli-tv-kd10:1.2.6": "since the legal procedure was illegitimate, reversible, and unfit to stand. ",
   "pli-tv-kd10:1.2.7": "Please side with me, Venerables, in accordance with the Teaching and the Monastic Law.” ",
