Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -20,8 +20,8 @@
   "pli-tv-kd10:1.2.5": "And I haven’t been ejected, ",
   "pli-tv-kd10:1.2.6": "since the legal procedure was illegitimate, reversible, and unfit to stand. ",
   "pli-tv-kd10:1.2.7": "Please side with me, Venerables, in accordance with the Teaching and the Monastic Law.” ",
-  "pli-tv-kd10:1.2.8": "And he was able to form a faction. ",
-  "pli-tv-kd10:1.2.9": "He then sent the same message to his friends in the country ",
+  "pli-tv-kd10:1.2.8": "He was able to form a faction. ",
+  "pli-tv-kd10:1.2.9": "He then sent the same message to his friends in the country, ",
   "pli-tv-kd10:1.2.15": "and again he was able to form a faction. ",
   "pli-tv-kd10:1.3.1": "The monks who sided with him went to the monks who had ejected him and said, ",
   "pli-tv-kd10:1.3.2": "“This isn’t an offense ",
