--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -24,7 +24,7 @@
   "pli-tv-kd10:1.2.9": "He then sent the same message to his friends in the country, ",
   "pli-tv-kd10:1.2.15": "and again he was able to form a faction. ",
   "pli-tv-kd10:1.3.1": "The monks who sided with him went to the monks who had ejected him and said, ",
-  "pli-tv-kd10:1.3.2": "“This isn’t an offense ",
+  "pli-tv-kd10:1.3.2": "“This isn’t an offense, ",
   "pli-tv-kd10:1.3.3": "and so this monk hasn’t committed one. ",
   "pli-tv-kd10:1.3.4": "He hasn’t been ejected, ",
   "pli-tv-kd10:1.3.5": "since the legal procedure was illegitimate, reversible, and unfit to stand.” ",
