--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -25,11 +25,11 @@
   "pli-tv-kd10:1.2.15": "and again he was able to form a faction. ",
   "pli-tv-kd10:1.3.1": "The monks who sided with him went to the monks who had ejected him and said, ",
   "pli-tv-kd10:1.3.2": "“This isn’t an offense, ",
-  "pli-tv-kd10:1.3.3": "and so this monk hasn’t committed one. ",
+  "pli-tv-kd10:1.3.3": "and so this monk hasn’t committed any. ",
   "pli-tv-kd10:1.3.4": "He hasn’t been ejected, ",
   "pli-tv-kd10:1.3.5": "since the legal procedure was illegitimate, reversible, and unfit to stand.” ",
   "pli-tv-kd10:1.3.6": "They replied, ",
-  "pli-tv-kd10:1.3.7": "“This is an offense ",
+  "pli-tv-kd10:1.3.7": "“This is an offense, ",
   "pli-tv-kd10:1.3.8": "and so this monk has committed one. ",
   "pli-tv-kd10:1.3.9": "He’s been ejected, ",
   "pli-tv-kd10:1.3.10": "since the legal procedure of ejection was legitimate, irreversible, and fit to stand. ",
