Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -30,11 +30,11 @@
   "pli-tv-kd10:1.3.5": "since the legal procedure was illegitimate, reversible, and unfit to stand.” ",
   "pli-tv-kd10:1.3.6": "They replied, ",
   "pli-tv-kd10:1.3.7": "“This is an offense, ",
-  "pli-tv-kd10:1.3.8": "and so this monk has committed one. ",
-  "pli-tv-kd10:1.3.9": "He’s been ejected, ",
-  "pli-tv-kd10:1.3.10": "since the legal procedure of ejection was legitimate, irreversible, and fit to stand. ",
-  "pli-tv-kd10:1.3.11": "Venerables, don’t side with this monk who has been ejected.” ",
-  "pli-tv-kd10:1.3.12": "But they still sided with that monk. ",
+  "pli-tv-kd10:1.3.8": "and he’s committed it. ",
+  "pli-tv-kd10:1.3.9": "And he’s been ejected. ",
+  "pli-tv-kd10:1.3.10": "The legal procedure was legitimate, irreversible, and fit to stand. ",
+  "pli-tv-kd10:1.3.11": "Venerables, don’t side with this monk.” ",
+  "pli-tv-kd10:1.3.12": "But they still sided with him. ",
   "pli-tv-kd10:1.4.1": "Soon afterwards a certain monk went to the Buddha, bowed, sat down, ",
   "pli-tv-kd10:1.4.2": "and told him all that had happened. ",
   "pli-tv-kd10:1.5.1": "Realizing that the Sangha of monks was divided, the Buddha ",
