--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -39,7 +39,7 @@
   "pli-tv-kd10:1.4.2": "and told him all that had happened. ",
   "pli-tv-kd10:1.5.1": "Realizing that the Sangha of monks was divided, the Buddha ",
   "pli-tv-kd10:1.5.2": "got up from his seat, went to those monks who had done the ejecting, and sat down on the prepared seat. He then said to those monks: ",
-  "pli-tv-kd10:1.5.3": "“Don’t always eject a monk just because it seems clear to you that he’s committed an offense. ",
+  "pli-tv-kd10:1.5.3": "“Don’t just eject a monk because it seems clear to you that he’s committed an offense. ",
   "pli-tv-kd10:1.6.1": "It may be that a monk has committed an offense. ",
   "pli-tv-kd10:1.6.2": "He doesn’t regard it as an offense, but there are other monks who do. ",
   "pli-tv-kd10:1.6.3": "If those monks know, ‘This monk is learned and a master of the tradition; he is an expert on the Teaching, the Monastic Law, and the Key Terms; he is knowledgeable and competent, has a sense of conscience, and is afraid of wrongdoing and fond of the training. ",
