--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -43,7 +43,7 @@
   "pli-tv-kd10:1.6.1": "It may be that a monk has committed an offense. ",
   "pli-tv-kd10:1.6.2": "He doesn’t regard it as an offense, but there are other monks who do. ",
   "pli-tv-kd10:1.6.3": "If they know, ‘This monk is learned and a master of the tradition; he’s an expert on the Teaching, the Monastic Law, and the Key Terms; he’s knowledgeable and competent, has a sense of conscience, and is afraid of wrongdoing and fond of the training. ",
-  "pli-tv-kd10:1.6.4": "If we eject this monk for not recognizing an offense, we won’t be able do the observance-day ceremony with him. Because of this there will be arguments and disputes in the Sangha; there will be schism, fracture, and separation in the Sangha,’ and if they understand the gravity of schism, they should not eject that monk for not recognizing an offense. ",
+  "pli-tv-kd10:1.6.4": "If we eject him for not recognizing an offense, we won’t be to able do the observance-day ceremony with him. Because of this, there’ll be arguments and disputes in the Sangha; there’ll be schism, fracture, and separation in the Sangha,’ and if they understand the gravity of schism, they shouldn’t eject that monk. ",
   "pli-tv-kd10:1.7.1": "It may be that a monk has committed an offense. ",
   "pli-tv-kd10:1.7.2": "He doesn’t regard it as an offense, but there are other monks who do. ",
   "pli-tv-kd10:1.7.3": "If those monks know, ‘This monk is learned and a master of the tradition; he is an expert on the Teaching, the Monastic Law, and the Key Terms; he is knowledgeable and competent, has a sense of conscience, and is afraid of wrongdoing and fond of the training. ",
