Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -53,8 +53,8 @@
   "pli-tv-kd10:1.7.7": "we won’t drink rice porridge with him; ",
   "pli-tv-kd10:1.7.8": "we won’t sit in the dining hall with him; ",
   "pli-tv-kd10:1.7.9": "we won’t stay in the same room with him; ",
-  "pli-tv-kd10:1.7.10": "we won’t bow down, stand up, raise our joined palms, and do acts of respect for one another according to seniority—",
-  "pli-tv-kd10:1.7.11": "because of this there will be arguments and disputes in the Sangha; there will be schism, fracture, and separation in the Sangha,’ and if they understand the gravity of schism, they should not eject that monk for not recognizing an offense.” ",
+  "pli-tv-kd10:1.7.10": "we won’t bow down, stand up, raise our joined palms, and do acts of respect for one another according to seniority. ",
+  "pli-tv-kd10:1.7.11": "Because of this, there’ll be arguments and disputes in the Sangha; there’ll be schism, fracture, and separation in the Sangha,’ and if they understand the gravity of schism, they shouldn’t eject that monk.” ",
   "pli-tv-kd10:1.8.1": "The Buddha got up from his seat, went to those monks who were siding with the ejected monk, and sat down on the prepared seat. He then said to those monks: ",
   "pli-tv-kd10:1.8.2": "“If you have committed an offense, don’t refuse to make amends for it just because you think that you haven’t committed it. ",
   "pli-tv-kd10:1.8.3": "It may be that a monk has committed an offense. ",
