Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -56,7 +56,7 @@
   "pli-tv-kd10:1.7.10": "we won’t bow down, stand up, raise our joined palms, and do acts of respect for one another according to seniority. ",
   "pli-tv-kd10:1.7.11": "Because of this, there’ll be arguments and disputes in the Sangha; there’ll be schism, fracture, and separation in the Sangha,’ and if they understand the gravity of schism, they shouldn’t eject that monk.” ",
   "pli-tv-kd10:1.8.1": "The Buddha got up from his seat, went to those monks who were siding with the ejected monk, and sat down on the prepared seat. He then said to those monks: ",
-  "pli-tv-kd10:1.8.2": "“If you have committed an offense, don’t refuse to make amends for it just because you think that you haven’t committed it. ",
+  "pli-tv-kd10:1.8.2": "“If you’ve committed an offense, don’t refuse to make amends for it just because you think that you haven’t committed it. ",
   "pli-tv-kd10:1.8.3": "It may be that a monk has committed an offense. ",
   "pli-tv-kd10:1.8.4": "He doesn’t regard it as an offense, but there are other monks who do. ",
   "pli-tv-kd10:1.8.5": "If that monk knows, ‘These monks are learned and masters of the tradition; they are experts on the Teaching, the Monastic Law, and the Key Terms; they are knowledgeable and competent, have a sense of conscience, and are afraid of wrongdoing and fond of the training. They are unlikely, because of me or anyone else, to act wrongly out of favoritism, ill will, confusion, or fear. ",
