Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -60,12 +60,12 @@
   "pli-tv-kd10:1.8.3": "It may be that a monk has committed an offense. ",
   "pli-tv-kd10:1.8.4": "He doesn’t regard it as an offense, but there are other monks who do. ",
   "pli-tv-kd10:1.8.5": "If he knows, ‘These monks are learned and masters of the tradition; they’re experts on the Teaching, the Monastic Law, and the Key Terms; they’re knowledgeable and competent, have a sense of conscience, and are afraid of wrongdoing and fond of the training. They’re unlikely, because of me or anyone else, to act wrongly out of favoritism, ill will, confusion, or fear. ",
-  "pli-tv-kd10:1.8.6": "Moreover, if these monks eject me for not recognizing an offense, they won’t be able do the observance-day ceremony with me. Because of this there will be arguments and disputes in the Sangha; there will be schism, fracture, and separation in the Sangha,’ and if he understands the gravity of schism, he should confess the offense even out of confidence in the others. ",
+  "pli-tv-kd10:1.8.6": "And if these monks eject me for not recognizing an offense, they won’t be able do the observance-day ceremony with me. Because of this, there’ll be arguments and disputes in the Sangha; there’ll be schism, fracture, and separation in the Sangha,’ and if he understands the gravity of schism, he should confess the offense even out of confidence in the others. ",
   "pli-tv-kd10:1.8.7": "It may be that a monk has committed an offense. ",
   "pli-tv-kd10:1.8.8": "He doesn’t regard it as an offense, but there are other monks who do. ",
-  "pli-tv-kd10:1.8.9": "If that monk knows, ‘These monks are learned and masters of the tradition; they are experts on the Teaching, the Monastic Law, and the Key Terms; they are knowledgeable and competent, have a sense of conscience, and are afraid of wrongdoing and fond of the training. They are unlikely, because of me or anyone else, to act wrongly out of favoritism, ill will, confusion, or fear. ",
-  "pli-tv-kd10:1.8.10": "Moreover, if these monks eject me for not recognizing an offense, they won’t do the invitation ceremony with me; ",
-  "pli-tv-kd10:1.8.11": "they won’t do the legal procedures of the Sangha with me; ",
+  "pli-tv-kd10:1.8.9": "If he knows, ‘These monks are learned and masters of the tradition; they’re experts on the Teaching, the Monastic Law, and the Key Terms; they’re knowledgeable and competent, have a sense of conscience, and are afraid of wrongdoing and fond of the training. They’re unlikely, because of me or anyone else, to act wrongly out of favoritism, ill will, confusion, or fear. ",
+  "pli-tv-kd10:1.8.10": "And if these monks eject me for not recognizing an offense, they won’t be able to do the invitation ceremony with me; ",
+  "pli-tv-kd10:1.8.11": "they won’t be able to do legal procedures with me; ",
   "pli-tv-kd10:1.8.12": "they won’t share a seat with me; ",
   "pli-tv-kd10:1.8.13": "they won’t drink rice porridge with me; ",
   "pli-tv-kd10:1.8.14": "they won’t sit in the dining hall with me; ",
