--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -70,7 +70,7 @@
   "pli-tv-kd10:1.8.13": "they won’t drink rice porridge with me; ",
   "pli-tv-kd10:1.8.14": "they won’t sit in the dining hall with me; ",
   "pli-tv-kd10:1.8.15": "they won’t stay in the same room with me; ",
-  "pli-tv-kd10:1.8.16": "we won’t bow down, stand up, raise our joined palms, and do acts of respect for one another according to seniority—because of this there will be arguments and disputes in the Sangha; there will be schism, fracture, and separation in the Sangha,’ and if he understands the gravity of schism, he should confess the offense even out of confidence in the others.” ",
+  "pli-tv-kd10:1.8.16": "we won’t bow down, stand up, raise our joined palms, and do acts of respect for one another according to seniority. Because of this, there’ll be arguments and disputes in the Sangha; there’ll be schism, fracture, and separation in the Sangha,’ and if he understands the gravity of schism, he should confess the offense even out of confidence in the others.” ",
   "pli-tv-kd10:1.8.17": "The Buddha then got up from his seat and left. ",
   "pli-tv-kd10:1.9.1": "Soon those monks who sided with the ejected monk did the observance-day ceremony and the legal procedures of the Sangha right there within the monastery zone. ",
   "pli-tv-kd10:1.9.2": "But the monks who had ejected him went outside the monastery zone and did the observance-day ceremony and the procedures of the Sangha there. ",
