Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -72,12 +72,12 @@
   "pli-tv-kd10:1.8.15": "they won’t stay in the same room with me; ",
   "pli-tv-kd10:1.8.16": "we won’t bow down, stand up, raise our joined palms, and do acts of respect for one another according to seniority. Because of this, there’ll be arguments and disputes in the Sangha; there’ll be schism, fracture, and separation in the Sangha,’ and if he understands the gravity of schism, he should confess the offense even out of confidence in the others.” ",
   "pli-tv-kd10:1.8.17": "The Buddha then got up from his seat and left. ",
-  "pli-tv-kd10:1.9.1": "Soon those monks who sided with the ejected monk did the observance-day ceremony and the legal procedures of the Sangha right there within the monastery zone. ",
-  "pli-tv-kd10:1.9.2": "But the monks who had ejected him went outside the monastery zone and did the observance-day ceremony and the procedures of the Sangha there. ",
+  "pli-tv-kd10:1.9.1": "Soon those monks who sided with the ejected monk did the observance-day ceremony and legal procedures right there within the monastery zone. ",
+  "pli-tv-kd10:1.9.2": "But the monks who had ejected him went outside the monastery zone and did the observance-day ceremony and legal procedures there. ",
   "pli-tv-kd10:1.9.3": "One of the monks who had done the ejecting went to the Buddha, bowed, sat down, ",
   "pli-tv-kd10:1.9.4": "and told him what was happening. ",
-  "pli-tv-kd10:1.9.7": "The Buddha replied: “If those monks who side with the ejected monk do the observance-day ceremony and the legal procedures of the Sangha right there within the monastery zone, and it’s in accordance with the motion and announcements as I have laid them down, then those procedures are legitimate, irreversible, and fit to stand. ",
-  "pli-tv-kd10:1.9.8": "And if you, the monks who did the ejecting, do the observance-day ceremony and the legal procedures of the Sangha right there within the monastery zone, and it’s in accordance with the motion and announcements as I have laid them down, then those procedures too are legitimate, irreversible, and fit to stand. ",
+  "pli-tv-kd10:1.9.7": "The Buddha replied: “If those monks who side with the ejected monk do the observance-day ceremony and legal procedures right there within the monastery zone, and it’s in accordance with the motion and announcements as I’ve laid them down, then those procedures are legitimate, irreversible, and fit to stand. ",
+  "pli-tv-kd10:1.9.8": "And if you, the monks who did the ejecting, do the observance-day ceremony and legal procedures right there within the monastery zone, and it’s in accordance with the motion and announcements as I’ve laid them down, then those procedures too are legitimate, irreversible, and fit to stand. ",
   "pli-tv-kd10:1.10.1": "This is so because you belong to a different Buddhist sect. ",
   "pli-tv-kd10:1.10.2": "There are these two grounds for belonging to a different Buddhist sect. ",
   "pli-tv-kd10:1.10.3": "Either one makes oneself belong to a different Buddhist sect, or a unanimous assembly ejects one for not recognizing an offense, for not making amends for an offense, or for not giving up a bad view. ",
