Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -78,7 +78,7 @@
   "pli-tv-kd10:1.9.4": "and told him what was happening. ",
   "pli-tv-kd10:1.9.7": "The Buddha replied: “If those monks who side with the ejected monk do the observance-day ceremony and legal procedures right there within the monastery zone, and it’s in accordance with the motion and announcements as I’ve laid them down, then those procedures are legitimate, irreversible, and fit to stand. ",
   "pli-tv-kd10:1.9.8": "And if you, the monks who did the ejecting, do the observance-day ceremony and legal procedures right there within the monastery zone, and it’s in accordance with the motion and announcements as I’ve laid them down, then those procedures too are legitimate, irreversible, and fit to stand. ",
-  "pli-tv-kd10:1.10.1": "This is so because you belong to a different Buddhist sect. ",
+  "pli-tv-kd10:1.10.1": "This is so because you now belong to a different Buddhist sect. ",
   "pli-tv-kd10:1.10.2": "There are these two grounds for belonging to a different Buddhist sect. ",
   "pli-tv-kd10:1.10.3": "Either one makes oneself belong to a different Buddhist sect, or a unanimous assembly ejects one for not recognizing an offense, for not making amends for an offense, or for not giving up a bad view. ",
   "pli-tv-kd10:1.10.5": "And there are these two grounds for belonging to the same Buddhist sect. ",
