--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -88,9 +88,9 @@
   "pli-tv-kd10:2.1.3": "“How can the Sakyan monastics behave like this?” ",
   "pli-tv-kd10:2.1.4": "The monks heard the complaints of those people, ",
   "pli-tv-kd10:2.1.5": "and the monks of few desires complained and criticized them, ",
-  "pli-tv-kd10:2.1.6": "“How can monks act like this?” ",
-  "pli-tv-kd10:2.1.7": "They told the Buddha. He had the Sangha gathered and questioned the monks: ",
-  "pli-tv-kd10:2.1.8": "“Is it true, monks, that monks are acting like this?” ",
+  "pli-tv-kd10:2.1.6": "“How can monks behave like this?” ",
+  "pli-tv-kd10:2.1.7": "They told the Buddha. … ",
+  "pli-tv-kd10:2.1.8": "“Is it true, monks, that monks are behaving like this?” ",
   "pli-tv-kd10:2.1.9": "“It’s true, Sir.” ",
   "pli-tv-kd10:2.1.10": "The Buddha rebuked them … ",
   "pli-tv-kd10:2.1.11": "He then gave a teaching and addressed the monks: ",
