--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -98,7 +98,7 @@
   "pli-tv-kd10:2.1.13": "they should sit down and reflect, ‘We won’t show improper physical and verbal behavior, such as grabbing one another with our hands.’ ",
   "pli-tv-kd10:2.1.14": "When the Sangha is divided, but the monks are behaving in accordance with the Teaching and are on friendly terms, they should sit down one seat apart.” ",
   "pli-tv-kd10:2.2.1": "The monks were also arguing and disputing in the midst of the Sangha, attacking one another verbally, ",
-  "pli-tv-kd10:2.2.2": "and they were unable to resolve that legal issue. ",
+  "pli-tv-kd10:2.2.2": "and were unable to resolve that legal issue. ",
   "pli-tv-kd10:2.2.3": "A certain monk went to the Buddha, bowed, and told him what was happening, adding, ",
   "pli-tv-kd10:2.2.6": "“Venerable Sir, it would be good if you went to those monks out of compassion.” ",
   "pli-tv-kd10:2.2.7": "The Buddha consented by remaining silent. ",
