Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -2837,7 +2837,7 @@
   "pli-tv-kd1:71.1.5": "to someone without nose … ",
   "pli-tv-kd1:71.1.6": "to someone without an ear and nose … ",
   "pli-tv-kd1:71.1.7": "to someone without a finger or toe … ",
-  "pli-tv-kd1:71.1.9": "to someone without a tendon … ",
+  "pli-tv-kd1:71.1.9": "to someone with a cut tendon … ",
   "pli-tv-kd1:71.1.10": "to someone with joined fingers … ",
   "pli-tv-kd1:71.1.11": "to a hunchback … ",
   "pli-tv-kd1:71.1.12": "to a dwarf … ",
