--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -2869,7 +2869,7 @@
   "pli-tv-kd1:71.2.5": "to someone without nose, ",
   "pli-tv-kd1:71.2.6": "to someone without an ear and nose, ",
   "pli-tv-kd1:71.2.7": "to someone without a finger or toe, ",
-  "pli-tv-kd1:71.2.9": "to someone without a tendon, ",
+  "pli-tv-kd1:71.2.9": "to someone with a cut tendon, ",
   "pli-tv-kd1:71.2.10": "to someone with joined fingers, ",
   "pli-tv-kd1:71.2.11": "to a hunchback, ",
   "pli-tv-kd1:71.2.12": "to a dwarf, ",
