--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -144,7 +144,7 @@
   "pli-tv-kd11:4.1.10": "he disparages the Buddha; he disparages the Teaching; he disparages the Sangha. ",
   "pli-tv-kd11:4.2.1": "“The Sangha may, if it wishes, do a procedure of condemnation against three kinds of monks: ",
   "pli-tv-kd11:4.2.2": "those who are quarrelsome, argumentative, and creators of legal issues in the Sangha; ",
-  "pli-tv-kd11:4.2.3": "those who are ignorant and incompetent, often committing offenses, incapable of determining whether they have committed an offense; ",
+  "pli-tv-kd11:4.2.3": "those who are ignorant and incompetent, often committing offenses, lacking in boundaries; ",
   "pli-tv-kd11:4.2.4": "those who are constantly and improperly socializing with householders. ",
   "pli-tv-kd11:4.2.6": "The Sangha may, if it wishes, do a procedure of condemnation against another three kinds of monks: ",
   "pli-tv-kd11:4.2.7": "those who have failed in the higher morality; those who have failed in conduct; those who have failed in view. ",
