Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -579,7 +579,7 @@
   "pli-tv-kd14:12.4.12": "The Sangha may, if it wishes, do a procedure of further penalty against three kinds of monks: ",
   "pli-tv-kd14:12.4.13": "those who are quarrelsome, argumentative, ",
   "pli-tv-kd14:12.4.14": "and creators of legal issues in the Sangha; ",
-  "pli-tv-kd14:12.4.15": "those who are ignorant, incompetent, often committing offenses, incapable of determining whether they have committed an offense; ",
+  "pli-tv-kd14:12.4.15": "those who are ignorant, incompetent, often committing offenses, lacking in boundaries; ",
   "pli-tv-kd14:12.4.16": "those who are constantly and improperly socializing with householders. ",
   "pli-tv-kd14:12.4.18": "The Sangha may, if it wishes, do a procedure of further penalty against another three kinds of monks: ",
   "pli-tv-kd14:12.4.19": "those who have failed in the higher morality; those who have failed in the higher conduct; those who have failed in view. ",
