--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -570,7 +570,7 @@
   "pli-tv-kd14:12.4.0": "6.3 The group of six on wishing ",
   "pli-tv-kd14:12.4.1": "“When a monk has three qualities, the Sangha may, if it wishes, do a legal procedure of further penalty against him: ",
   "pli-tv-kd14:12.4.2": "he is quarrelsome, argumentative, and a creator of legal issues in the Sangha; ",
-  "pli-tv-kd14:12.4.3": "he is ignorant, incompetent, often committing offenses, incapable of determining whether he’s committed an offense; ",
+  "pli-tv-kd14:12.4.3": "he is ignorant, incompetent, often committing offenses, lacking in boundaries; ",
   "pli-tv-kd14:12.4.4": "he is constantly and improperly socializing with householders. ",
   "pli-tv-kd14:12.4.6": "When a monk has another three qualities, the Sangha may, if it wishes, do a procedure of further penalty against him: ",
   "pli-tv-kd14:12.4.7": "he has failed in the higher morality; he has failed in conduct; he has failed in view. ",
