Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1218,7 +1218,7 @@
   "pli-tv-kd11:31.1.89": "he disparages the Buddha; he disparages the Teaching; he disparages the Sangha. ",
   "pli-tv-kd11:31.1.91": "“The Sangha may, if it wishes, do a procedure of ejection for not making amends for an offense against three kinds of monks: ",
   "pli-tv-kd11:31.1.92": "those who are quarrelsome, argumentative, and creators of legal issues in the Sangha; ",
-  "pli-tv-kd11:31.1.93": "those who are ignorant and incompetent, often committing offenses, incapable of determining whether they have committed an offense; ",
+  "pli-tv-kd11:31.1.93": "those who are ignorant and incompetent, often committing offenses, incapable of determining whether they have committed an offenselacking in boundaries; ",
   "pli-tv-kd11:31.1.94": "those who are constantly and improperly socializing with householders. ",
   "pli-tv-kd11:31.1.96": "The Sangha may, if it wishes, do a procedure of ejection for not making amends for an offense against another three kinds of monks: ",
   "pli-tv-kd11:31.1.97": "those who have failed in the higher morality; those who have failed in conduct; those who have failed in view. ",
