Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -995,7 +995,7 @@
   "pli-tv-kd11:26.1.44": "he disparages the Buddha; he disparages the Teaching; he disparages the Sangha. ",
   "pli-tv-kd11:26.1.46": "“The Sangha may, if it wishes, do a procedure of ejection for not recognizing an offense against three kinds of monks: ",
   "pli-tv-kd11:26.1.47": "those who are quarrelsome, argumentative, and creators of legal issues in the Sangha; ",
-  "pli-tv-kd11:26.1.48": "those who are ignorant and incompetent, often committing offenses, incapable of determining whether they have committed an offense; ",
+  "pli-tv-kd11:26.1.48": "those who are ignorant and incompetent, often committing offenses, lacking in boundaries; ",
   "pli-tv-kd11:26.1.49": "those who are constantly and improperly socializing with householders. ",
   "pli-tv-kd11:26.1.51": "The Sangha may, if it wishes, do a procedure of ejection for not recognizing an offense against another three kinds of monks: ",
   "pli-tv-kd11:26.1.52": "those who have failed in the higher morality; those who have failed in conduct; those who have failed in view. ",
