Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -228,7 +228,7 @@
   "pli-tv-kd11:8.2.23": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
   "pli-tv-kd11:8.2.24": "The first section on the legal procedure of condemnation is finished. ",
   "pli-tv-kd11:9.1.0": "2. The legal procedure of demotion ",
-  "pli-tv-kd11:9.1.1": "At that time Venerable Seyyasaka was ignorant and incompetent, often committing offenses, and incapable of determining whether he had committed an offense. ",
+  "pli-tv-kd11:9.1.1": "At that time Venerable Seyyasaka was ignorant and incompetent, often committing offenses, and lacking in boundaries. ",
   "pli-tv-kd11:9.1.2": "And he was constantly and improperly socializing with householders. ",
   "pli-tv-kd11:9.1.3": "Moreover, the monks regularly gave him probation, sent him back to the beginning, gave him trial periods, and rehabilitated him. ",
   "pli-tv-kd11:9.1.4": "The monks of few desires complained and criticized him, ",
