Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -268,7 +268,7 @@
   "pli-tv-kd11:9.2.19": "For the second time I speak on this matter. … ",
   "pli-tv-kd11:9.2.20": "For the third time I speak on this matter. ",
   "pli-tv-kd11:9.2.21": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:9.2.22": "The monk Seyyasaka is ignorant and incompetent, often committing offenses, and incapable of determining whether he has committed an offense. ",
+  "pli-tv-kd11:9.2.22": "The monk Seyyasaka is ignorant and incompetent, often committing offenses, and lacking in boundaries. ",
   "pli-tv-kd11:9.2.23": "He is constantly and improperly socializing with householders. ",
   "pli-tv-kd11:9.2.24": "Moreover, the monks regularly give him probation, send him back to the beginning, give him the trial period, and rehabilitate him. ",
   "pli-tv-kd11:9.2.25": "The Sangha does a legal procedure of demotion against the monk Seyyasaka, ",
@@ -334,7 +334,7 @@
   "pli-tv-kd11:10.1.75.0": "2.3 The group of six on wishing ",
   "pli-tv-kd11:10.1.75.1": "“When a monk has three qualities, the Sangha may, if it wishes, do a legal procedure of demotion against him: ",
   "pli-tv-kd11:10.1.76": "he is quarrelsome, argumentative, and a creator of legal issues in the Sangha; ",
-  "pli-tv-kd11:10.1.77": "he is ignorant and incompetent, often committing offenses, incapable of determining whether he has committed an offense; ",
+  "pli-tv-kd11:10.1.77": "he is ignorant and incompetent, often committing offenses, lacking in boundaries; ",
   "pli-tv-kd11:10.1.78": "he is constantly and improperly socializing with householders. ",
   "pli-tv-kd11:10.1.80": "When a monk has another three qualities, the Sangha may, if it wishes, do a procedure of demotion against him: ",
   "pli-tv-kd11:10.1.81": "he has failed in the higher morality; he has failed in conduct; he has failed in view. ",
