Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -342,7 +342,7 @@
   "pli-tv-kd11:10.1.84": "he disparages the Buddha; he disparages the Teaching; he disparages the Sangha. ",
   "pli-tv-kd11:10.1.86": "“The Sangha may, if it wishes, do a procedure of demotion against three kinds of monks: ",
   "pli-tv-kd11:10.1.87": "those who are quarrelsome, argumentative, and creators of legal issues in the Sangha; ",
-  "pli-tv-kd11:10.1.88": "those who are ignorant and incompetent, often committing offenses, incapable of determining whether they have committed an offense; ",
+  "pli-tv-kd11:10.1.88": "those who are ignorant and incompetent, often committing offenses, lacking in boundaries; ",
   "pli-tv-kd11:10.1.89": "those who are constantly and improperly socializing with householders. ",
   "pli-tv-kd11:10.1.91": "The Sangha may, if it wishes, do a procedure of demotion against another three kinds of monks: ",
   "pli-tv-kd11:10.1.92": "those who have failed in the higher morality; those who have failed in conduct; those who have failed in view. ",
