--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -575,7 +575,7 @@
   "pli-tv-kd11:14.1.56": "he has wrong livelihood by body; he has wrong livelihood by speech; he has wrong livelihood by body and speech. ",
   "pli-tv-kd11:14.2.1": "“The Sangha may, if it wishes, do a procedure of banishment against three kinds of monks: ",
   "pli-tv-kd11:14.2.2": "those who are quarrelsome, argumentative, and creators of legal issues in the Sangha; ",
-  "pli-tv-kd11:14.2.3": "those who are ignorant and incompetent, often committing offenses, incapable of determining whether they have committed an offense; ",
+  "pli-tv-kd11:14.2.3": "those who are ignorant and incompetent, often committing offenses, lacking in boundaries; ",
   "pli-tv-kd11:14.2.4": "those who are constantly and improperly socializing with householders. ",
   "pli-tv-kd11:14.2.6": "The Sangha may, if it wishes, do a procedure of banishment against another three kinds of monks: ",
   "pli-tv-kd11:14.2.7": "those who have failed in the higher morality; those who have failed in conduct; those who have failed in view. ",
