--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd16_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd16_translation-en-brahmali.json
@@ -924,7 +924,7 @@
   "pli-tv-kd16:16.1.2": "The monks Assaji and Punabbasuka heard about this and said, ",
   "pli-tv-kd16:16.1.4": "“Well, let’s distribute all the dwellings belonging to the Sangha. ",
   "pli-tv-kd16:16.1.5": "Sāriputta and Mahāmoggallāna are in the grip of bad desires. ",
-  "pli-tv-kd16:16.1.6": "We won’t assign dwellings to them.” And they distributed all the dwellings belonging to the Sangha. ",
+  "pli-tv-kd16:16.1.6": "We won’t assign dwellings to them.” And they shared out all the dwellings belonging to the Sangha. ",
   "pli-tv-kd16:16.1.7": "The Buddha eventually arrived at Kīṭāgiri. ",
   "pli-tv-kd16:16.1.8": "And he said to a group of monks, ",
   "pli-tv-kd16:16.1.10": "“Go to the monks Assaji and Punabbasuka and say, ",
