--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd16_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd16_translation-en-brahmali.json
@@ -937,7 +937,7 @@
   "pli-tv-kd16:16.1.19": "and he may stay wherever he likes. ",
   "pli-tv-kd16:16.1.20": "But Sāriputta and Mahāmoggallāna are in the grip of bad desires. ",
   "pli-tv-kd16:16.1.21": "We won’t assign dwellings to them.” ",
-  "pli-tv-kd16:16.2.1": "“So you have distributed the dwellings belonging to the Sangha?” ",
+  "pli-tv-kd16:16.2.1": "“So you have shared out the dwellings belonging to the Sangha?” ",
   "pli-tv-kd16:16.2.2": "“Yes.” ",
   "pli-tv-kd16:16.2.3": "The monks of few desires complained and criticized them, ",
   "pli-tv-kd16:16.2.4": "“How can these monks share out dwellings belonging to the Sangha?” ",
