Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd16_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd16_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd16_translation-en-brahmali.json
@@ -932,7 +932,7 @@
   "pli-tv-kd16:16.1.12": "Assign dwellings to the Buddha, to the Sangha of monks, and to Sāriputta and Mahāmoggallāna.’” ",
   "pli-tv-kd16:16.1.13": "Saying, “Yes, Sir,” they did just that. ",
   "pli-tv-kd16:16.1.16": "The monks Assaji and Punabbasuka replied, “There are no dwellings belonging to the Sangha; ",
-  "pli-tv-kd16:16.1.17": "they have all been distributed to us. ",
+  "pli-tv-kd16:16.1.17": "they have all been shared out to us. ",
   "pli-tv-kd16:16.1.18": "The Buddha is welcome ",
   "pli-tv-kd16:16.1.19": "and he may stay wherever he likes. ",
   "pli-tv-kd16:16.1.20": "But Sāriputta and Mahāmoggallāna are in the grip of bad desires. ",
