--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -63,5 +63,6 @@
   "sn22.55:9.2": "weil Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein verschwinden werden, ",
   "sn22.55:9.3": "deshalb kann ein Mönch, der sich dieses fest vornimmt, die fünf niederen Fesseln durchtrennen.“ ",
   "sn22.55:9.4": "„Herr, ein Mönch, der sich dieses fest vornimmt, kann die fünf niederen Fesseln durchtrennen. ",
-  "sn22.55:10.1": "Aber wie soll er erkennen und sehen, um die Befleckungen in diesem Leben aufzulösen?“ "
+  "sn22.55:10.1": "Aber wie soll er erkennen und sehen, um die Befleckungen in diesem Leben aufzulösen?“ ",
+  "sn22.55:10.2": "„Mönch, ein ungebildeter gewöhnlicher Mensch sorgt sich um Dinge, um die man sich nicht zu sorgen braucht. "
 }
