--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -65,5 +65,6 @@
   "sn22.55:9.4": "„Herr, ein Mönch, der sich dieses fest vornimmt, kann die fünf niederen Fesseln durchtrennen. ",
   "sn22.55:10.1": "Aber wie soll er erkennen und sehen, um die Befleckungen in diesem Leben aufzulösen?“ ",
   "sn22.55:10.2": "„Mönch, ein ungebildeter gewöhnlicher Mensch sorgt sich um Dinge, um die man sich nicht zu sorgen braucht. ",
-  "sn22.55:10.3": "Denn ein ungebildeter gewöhnlicher Mensch sorgt sich: "
+  "sn22.55:10.3": "Denn ein ungebildeter gewöhnlicher Mensch sorgt sich: ",
+  "sn22.55:10.4": "‚Es könnte nicht sein, und es könnte nicht mein sein. Es wird nicht sein, und es wird nicht mein sein.‘ "
 }
