--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -67,5 +67,6 @@
   "sn22.55:10.2": "„Mönch, ein ungebildeter gewöhnlicher Mensch sorgt sich um Dinge, um die man sich nicht zu sorgen braucht. ",
   "sn22.55:10.3": "Denn ein ungebildeter gewöhnlicher Mensch sorgt sich: ",
   "sn22.55:10.4": "‚Es könnte nicht sein, und es könnte nicht mein sein. Es wird nicht sein, und es wird nicht mein sein.‘ ",
-  "sn22.55:11.1": "Ein gebildeter edler Schüler sorgt sich nicht um Dinge, um die man sich nicht zu sorgen braucht. "
+  "sn22.55:11.1": "Ein gebildeter edler Schüler sorgt sich nicht um Dinge, um die man sich nicht zu sorgen braucht. ",
+  "sn22.55:11.2": "Denn ein gebildeter edler Schüler sorgt sich nicht: "
 }
